# MemeGame

./: Cargo.toml
server/: Cargo.toml  data.db
server/migrations/2025-09-15-194432-0000_create_db/: up.sql
server/src/: main.rs  models.rs  schema.rs
src/: main.rs
