[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4" }
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.9.2"
diesel = {version = "2.2.12", features = ["sqlite", "uuid", "r2d2"] }
uuid = { version =  "1.18.1", features = ["serde", "v4"] }
dotenv = "0.15.0"